--- a/index.html
+++ b/index.html
@@ -1,35 +1,49 @@
-
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Happy Birthday</title>
-    <!-- CSS -->
-    <link rel="stylesheet" href="css/style.css" />
-  </head>
-  <body>
-    <div class="birthdayCard">
-      <div class="cardFront">
-        <h3 class="happy">HAPPY BIRTHDAY</h3>
-        <div class="balloons">
-          <div class="balloon-1"></div>
-          <div class="balloon-2"></div>
-          <div class="balloon-3"></div>
-          <div class="balloon-4"></div>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="shortcut icon" type="image/png" href="img/icon.png" />
+    <title>Ucapan Perpisahan</title>
+    <!-- Google Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap" rel="stylesheet">
+    <!-- My Style -->
+    <link rel="stylesheet" href="style/main.css" />
+</head>
+
+<body>
+    <audio class="song" loop autoplay>
+        <source src="music/farewell.mp3" type="audio/mpeg">
+        Your browser doesn't support audio playback.
+    </audio>
+
+    <div class="container">
+        <h1>Goodbye, My Friend!</h1>
+        <p>As we part ways, I want you to remember:</p>
+        <blockquote>
+            "Though we may be apart, our memories will remain forever in our hearts."
+        </blockquote>
+        
+        <div class="image-section">
+            <img src="img/farewell.jpg" alt="Farewell" class="farewell-image" />
         </div>
-      </div>
-      <div class="cardInside">
-        <h3 class="back">HAPPY BIRTHDAY</h3>
-        <p>Dear Friend,</p>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
-          expedita debitis esse quaerat adipisci iste illum placeat incidunt
-          reprehenderit laudantium!
-        </p>
-        <p class="name">xxx</p>
-      </div>
+
+        <div class="message">
+            <p>
+                Your journey has just begun, and I believe you will achieve amazing things. 
+                Keep shining, and remember that I am cheering for you from afar!
+            </p>
+        </div>
+
+        <div class="footer">
+            <p>Always your bestie, supporting you every step of the way!</p>
+        </div>
     </div>
-  </body>
+
+</body>
+
 </html>
